...
        guard let httpResponse = response as? HTTPURLResponse else {
            throw NetworkError.invalidResponse
        }
        
        switch httpResponse.statusCode {
        case 200...299:
            return
        case 400:
            throw NetworkError.badRequest(parseErrorMessage(from: data))
        case 401:
            throw NetworkError.unauthorized
        case 403:
            throw NetworkError.forbidden
...
